Updated Company creation form. Updated Claim Profile Logic

--- a/src/ckanext-regx/ckanext/regx/templates/admin_all_user_profiles.html
+++ b/src/ckanext-regx/ckanext/regx/templates/admin_all_user_profiles.html
@@ -11,7 +11,7 @@
     }
 
     .dataTable th {
-        background-color: #007bff;
+        background-color: #0b7a8b;
         color: white;
         font-weight: bold;
     }
