--- a/src/ckanext-regx/ckanext/regx/templates/edit_company1.html
+++ b/src/ckanext-regx/ckanext/regx/templates/edit_company1.html
@@ -39,7 +39,7 @@
 
     .modern-form .btn-submit {
         display: inline-block;
-        background-color: #007bff;
+        background-color: #0b7a8b;
         color: #fff;
         padding: 10px 20px;
         font-size: 16px;
@@ -80,7 +80,7 @@
                 <input type="url" id="website" name="website" value="{{ company[2] }}" required readonly>
             </div>
             <div class="form-group">
-                <label for="address">Address:</label>
+                <label for="address">Email Address:</label>
                 <input type="text" id="address" name="address" value="{{ company[3] }}" required>
             </div>
             <div class="form-group">
