--- a/src/ckanext-regx/ckanext/regx/templates/search_profiles.html
+++ b/src/ckanext-regx/ckanext/regx/templates/search_profiles.html
@@ -24,7 +24,7 @@
         padding: 15px 25px;
         font-size: 18px;
         cursor: pointer;
-        background-color: #007bff;
+        background-color: #0b7a8b;
         color: #fff;
         border: none;
         border-radius: 5px;
