--- a/src/ckanext-regx/ckanext/regx/templates/side_nav.html
+++ b/src/ckanext-regx/ckanext/regx/templates/side_nav.html
@@ -3,14 +3,13 @@
     <ul>
         <li><a href="{{ h.url_for('regx.index') }}">🏠 Home</a></li>
         {% if c.user and not c.userobj.sysadmin %}
-        <li><a href="{{ h.url_for('regx.company_form') }}">📋 Company Profile</a></li>
-        <li><a href="{{ h.url_for('regx.search_company') }}">📋 Search Profile</a></li>
+        <li><a href="{{ h.url_for('regx.company_form') }}">🏢 Company Profile</a></li>
+        <li><a href="{{ h.url_for('regx.search_company') }}">🔍 Search Profile</a></li>
         <li><a href="{{ h.url_for('regx.claim_profile') }}">📋 Claim Profile</a></li>
         {% endif %}
         {% if c.user and c.userobj.sysadmin %}
-        <li><a href="{{ h.url_for('regx.admin_all_user_profiles') }}">⚙️ All Users</a></li>
-        <li><a href="{{ h.url_for('regx.admin_all_profiles') }}">📋 Company Profiles</a></li>
-        <li><a href="#">⚙️ Web Scrapping</a></li>
+        <li><a href="{{ h.url_for('regx.admin_all_user_profiles') }}">👥 All Users</a></li>
+        <li><a href="{{ h.url_for('regx.admin_all_profiles') }}">🏢 Company Profiles</a></li>
         {% endif %}
 
     </ul>
