Completed Edit Flow with alternative names

--- a/src/ckanext-regx/ckanext/regx/templates/claim_profile.html
+++ b/src/ckanext-regx/ckanext/regx/templates/claim_profile.html
@@ -22,11 +22,11 @@
             <form id="claim_profile" action="/regx/submit_claim_profile" method="post">
                 {{ h.csrf_input() }}
                 <div class="claim-form-group">
-                    <label for="website">Your Website</label>
+                    <label for="website"> Website</label>
                     <input type="url" id="website" name="website" placeholder="Enter your official website" required>
                 </div>
                 <div class="claim-form-group">
-                    <label for="email">Your Email Address</label>
+                    <label for="email">Claimant Email Address</label>
                     <input type="email" id="email" name="email" placeholder="Enter your official email" required>
                 </div>
                 <div class="claim-form-group">
