--- a/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
+++ b/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
@@ -76,11 +76,32 @@
                 <input type="email" id="email_address" name="email_address" value="{{ company_obj[3] }}" required
                     readonly>
             </div>
+            <div class="form-group">
+                <label for="company_address">Company Address</label>
+                <input type="text" id="company_address" name="company_address"
+                    value="{{ company_obj[4] if company_obj[4] else 'Address Not found' }}" required readonly>
+            </div>
             <button type="submit" id='update_claim_btn' class="btn-submit">Claim Profile</button>
         </form>
     </div>
 </div>
 <script>
+
+    // Function to ensure website URL starts with https://
+    function ensureHttps(url) {
+        if (!url.startsWith('http://') && !url.startsWith('https://')) {
+            return `https://${url}`;
+        }
+        return url.replace('http://', 'https://');
+    }
+    // Update website field value on page load
+    document.addEventListener('DOMContentLoaded', function () {
+        const websiteInput = document.getElementById('website');
+        if (websiteInput) {
+            websiteInput.value = ensureHttps(websiteInput.value);
+        }
+    });
+
     // Handle OTP Submission
     document.querySelector("#update_claim_f").addEventListener("submit", async function (e) {
         e.preventDefault();
